HOME PAGE fix double scrollbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,6 @@ html, body{
     background:#fff;
     letter-spacing: 1px;
     overflow-y: hidden;
-    overflow-x: scroll;
 }
 
 body {
@@ -72,7 +71,7 @@ footer i{
 }
 
 #main-nav {
-    width:100vh;
+    width: calc(100vh - 17px);
     height:45px;
     margin: 5vh 0 0 0;
 }
